--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "next": "^15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "swiper": "^11.2.1"
+    "react-simple-typewriter": "^5.0.1",
+    "swiper": "^11.2.1",
+    "typeit-react": "^2.7.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
