--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "next": "^15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-simple-typewriter": "^5.0.1",      
+    "react-simple-typewriter": "^5.0.1",
     "swiper": "^11.2.1",
     "typeit-react": "^2.7.8"
   },
@@ -23,14 +23,14 @@
     "@eslint/eslintrc": "^3",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
-    "@types/node": "^20.17.17",
-    "@types/react": "^19.0.8",
+    "@types/node": "20.17.28",
+    "@types/react": "19.0.12",
     "@types/react-dom": "^19.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "jest": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.7.3"
+    "typescript": "5.8.2"
   }
 }
