--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jest": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "5.8.2"
+    "typescript": "5.8.2",
+    "ts-prune": "^0.10.3"
   }
 }
