--- a/package.json
+++ b/package.json
@@ -2,42 +2,38 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "description": "Bridging the gap between design and functionality. I leverage my expertise in [mention your key technologies, e.g., React, Next.js, etc.] to create robust and scalable frontend architectures, ensuring optimal performance and accessibility.",
+  "description": "Bridging the gap between design and functionality. I leverage my expertise in React, Next.js, and modern web technologies to create robust and scalable frontend architectures, ensuring optimal performance and accessibility.",
   "engines": {
-    "node": "18.x"
+    "node": ">=18.0.0"
   },
   "scripts": {
-    "dev": "next dev ",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "^2.2.0",
-    "clsx": "^2.1.1",
-    "framer-motion": "^12.9.2",
-    "next": "^15.1.6",
-    "next-auth": "^4.24.11",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0",
-    "react-simple-typewriter": "^5.0.1",
-    "swiper": "^11.2.1",
-    "typeit-react": "^2.7.8"
+    "@heroicons/react": "2.1.1",
+    "clsx": "2.1.0",
+    "framer-motion": "11.0.3",
+    "next": "14.1.0",
+    "next-auth": "4.24.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "5.0.1",
+    "react-simple-typewriter": "5.0.1",
+    "swiper": "11.0.5",
+    "typeit": "8.8.3"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@types/node": "20.17.28",
-    "@types/react": "19.0.12",
-    "@types/react-dom": "^19.0.3",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.6",
-    "jest": "^29.7.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "5.8.2",
-    "ts-prune": "^0.10.3"
+    "@types/node": "20.11.16",
+    "@types/react": "18.2.52",
+    "@types/react-dom": "18.2.18",
+    "autoprefixer": "10.4.17",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.1.0",
+    "postcss": "8.4.33",
+    "tailwindcss": "3.4.1",
+    "typescript": "5.3.3"
   }
 }
