--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "@heroicons/react": "2.1.1",
     "clsx": "2.1.0",
     "framer-motion": "11.0.3",
+    "gray-matter": "^4.0.3",
     "next": "14.1.0",
     "next-auth": "4.24.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "5.0.1",
     "react-simple-typewriter": "5.0.1",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
+    "rss-parser": "^3.13.0",
     "swiper": "11.0.5",
     "typeit": "8.8.3"
   },
