--- a/package.json
+++ b/package.json
@@ -29,17 +29,13 @@
     "swiper": "11.0.5",
     "typeit": "8.8.3"
   },
-  "devDependencies": {
-    "@types/node": "20.11.16",
-    "@types/react": "18.2.52",
-    "@types/react-dom": "18.2.18",
+ "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.35.0",
-    "@typescript-eslint/parser": "^8.35.0",
+    "@typescript-eslint/parser": "^8.35.0",    
     "autoprefixer": "10.4.17",
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.1.0",
-    "postcss": "8.4.33",
+    "eslint": "^9.0.0",                     
+    "eslint-config-next": "^15.0.0",          
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
-  }
+}
 }
