--- a/package.json
+++ b/package.json
@@ -29,13 +29,15 @@
     "swiper": "11.0.5",
     "typeit": "8.8.3"
   },
- "devDependencies": {
+  "devDependencies": {
+    "@types/node": "^24.0.7",
+    "@types/react": "^19.1.8",
     "@typescript-eslint/eslint-plugin": "^8.35.0",
-    "@typescript-eslint/parser": "^8.35.0",    
+    "@typescript-eslint/parser": "^8.35.0",
     "autoprefixer": "10.4.17",
-    "eslint": "^9.0.0",                     
-    "eslint-config-next": "^15.0.0",          
+    "eslint": "^9.0.0",
+    "eslint-config-next": "^15.0.0",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
-}
+  }
 }
