--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
   "dependencies": {
     "@heroicons/react": "2.1.1",
     "clsx": "2.1.0",
-    "framer-motion": "11.0.3",
+    "framer-motion": "^12.20.1",
     "gray-matter": "^4.0.3",
-    "next": "14.1.0",
-    "next-auth": "4.24.5",
+    "next": "^14.2.30",
+    "next-auth": "^4.24.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "5.0.1",
-    "react-simple-typewriter": "5.0.1",
+    "react-simple-typewriter": "^5.0.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "rss-parser": "^3.13.0",
