chore: add npm workspaces configuration to package.json and remove pnpm workspace file

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,7 +1,3 @@
-ignoredBuiltDependencies:
-  - typeit
-  - unrs-resolver
-packages:
-  - 'app'
-  - 'lib'
-  - 'posts'
+# Remove pnpm-specific fields and keep only npm-compatible configuration
+# If you want to use npm workspaces, use package.json "workspaces" field instead
+# This file can be deleted if you are not using pnpm
