--- a/package.json
+++ b/package.json
@@ -39,5 +39,10 @@
     "eslint-config-next": "^15.0.0",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
-  }
+  },
+  "workspaces": [
+    "app",
+    "lib",
+    "posts"
+  ]
 }
