--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "description": "Bridging the gap between design and functionality. I leverage my expertise in React, Next.js, and modern web technologies to create robust and scalable frontend architectures, ensuring optimal performance and accessibility.",
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   },
   "scripts": {
     "dev": "next dev",
